@@ -1,3 +1,17 @@
 # GeometryDashAI
 
 Project's web page: https://github.com/ana-bagic/aidash-page/tree/master
+
+## How to start game?
+
+```
+Install JavaFX
+Import project to Eclipse
+Set VM arguments for run configurations to:
+--module-path
+"<path-to-javafx-lib>"
+--add-modules
+javafx.controls,javafx.fxml
+--add-modules
+javafx.media,javafx.fxml
+```
